--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "YT-api-search-app",
-  "version": "1.0.0",
-  "description": "Simple App working with YouTube API",
-  "main": "index.js",
-  "repository": "https://github.com/dariodari0/YT-api-search-app.git",
-  "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "css-loader": "^0.28.11",
-    "style-loader": "^0.20.3",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.14.0"
-  },
-  "dependencies": {
-    "babel-preset-stage-1": "^6.1.18",
-    "bootstrap": "^4.1.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.3",
-    "react": "^0.14.3",
-    "react-animated-css": "^1.0.4",
-    "react-dom": "^0.14.3",
-    "react-router": "^2.0.1",
-    "webfontloader": "^1.6.28",
-    "youtube-api-search": "0.0.5"
-  }
+    "name": "yt-api-search-frontend-app",
+    "version": "0.0.1",
+    "description": "",
+    "main": "index.js",
+    "repository": "git@github.com:dariodari0/yt-api-frontend-app.git",
+    "scripts": {
+        "start": "webpack-dev-server --mode development --open",
+        "build": "webpack --mode production"
+    },
+    "author": "DarMar",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.4",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-react": "^6.24.1",
+        "bootstrap": "^4.1.0",
+        "css-loader": "^0.28.11",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "html-loader": "^0.5.5",
+        "html-webpack-plugin": "^3.0.7",
+        "mini-css-extract-plugin": "^0.2.0",
+        "react": "^16.3.0",
+        "react-dom": "^16.3.0",
+        "style-loader": "^0.20.3",
+        "webpack": "^4.2.0",
+        "webpack-cli": "^2.0.12",
+        "webpack-dev-server": "^3.1.1"
+    },
+    "dependencies": {
+        "jquery": "^3.3.1",
+        "node-sass": "^4.8.3",
+        "popper.js": "^1.14.3",
+        "react-animated-css": "^1.0.4",
+        "sass-loader": "^6.0.7",
+        "webfontloader": "^1.6.28",
+        "youtube-api-search": "0.0.5"
+    }
 }
