--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "yt-api-search-frontend-app",
-    "version": "0.0.1",
+    "name": "Youtoobe-frontend-app",
+    "version": "0.1.1",
     "description": "",
     "main": "index.js",
-    "repository": "git@github.com:dariodari0/yt-api-frontend-app.git",
+    "repository": "git@github.com:dariodari0/Youtoobe-frontend-app.git",
     "scripts": {
         "start": "webpack-dev-server --mode development --open",
         "build": "webpack --mode production",
         "server": "node server.js"
     },
-    "author": "DarMar",
+    "author": "dmar",
     "license": "ISC",
     "devDependencies": {
         "babel-core": "^6.26.0",
@@ -31,6 +31,7 @@
     },
     "dependencies": {
         "jquery": "^3.3.1",
+        "lodash": "^4.17.5",
         "node-sass": "^4.8.3",
         "popper.js": "^1.14.3",
         "react-animated-css": "^1.0.4",
